# zero2prod

./: .env  Cargo.toml  Dockerfile  sqlx-data.json
.github/workflows/: general.yaml  general.yml  scheduled-audit.yaml
conf/: base.yaml  local.yaml
configuration/: local.yaml
migrations/: 20201217124611_subscribe_table.sql  20210424051728_subscriptions_table.sql
src/: conf.rs  configuration.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscribe.rs
