[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Justin"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "3"
serde = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
unicode-segmentation = "1.7"
validator = "0.12"

[dependencies.config]
version = "0.10"
default-features = false
features = ["yaml"]


[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dependencies.sqlx]
version = "0.4"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]
