[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Justin"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "3.3.2"
serde = "1.0.125"
chrono = "0.4.19"
tracing = "0.1.25"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.2.17", features = ["registry", "env-filter"] }
tracing-actix-web = "0.2.1"
tracing-bunyan-formatter = "0.2.0"
unicode-segmentation = "1.7.1"
validator = "0.13.0"
dotenv = "0.15.0"
rand = { version = "0.8.3", features = ["std_rng"] }
uuid = { version = "0.8.2", features = ["v4"] }

[dependencies.sqlx]
version = "~0.4"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]
